[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://settings_menu.gd" id="1"]
[ext_resource type="FontFile" path="res://Fonts/Kenney Mini Square Mono.ttf" id="2"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03, 0.03, 0.03, 1)

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MainMargin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 40
text = "SETTINGS"
horizontal_alignment = 1

[node name="Panel" type="PanelContainer" parent="MainMargin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContent" type="VBoxContainer" parent="MainMargin/VBox/Panel"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="MusicRow" type="HBoxContainer" parent="MainMargin/VBox/Panel/VBoxContent"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LabelMusic" type="Label" parent="MainMargin/VBox/Panel/VBoxContent/MusicRow"]
layout_mode = 2
size_flags_horizontal = 1
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 26
text = "MUSIC"

[node name="SliderMusic" type="HSlider" parent="MainMargin/VBox/Panel/VBoxContent/MusicRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="ValueMusic" type="Label" parent="MainMargin/VBox/Panel/VBoxContent/MusicRow"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 20
text = "80%"
horizontal_alignment = 2

[node name="SfxRow" type="HBoxContainer" parent="MainMargin/VBox/Panel/VBoxContent"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LabelSfx" type="Label" parent="MainMargin/VBox/Panel/VBoxContent/SfxRow"]
layout_mode = 2
size_flags_horizontal = 1
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 26
text = "SFX"

[node name="SliderSfx" type="HSlider" parent="MainMargin/VBox/Panel/VBoxContent/SfxRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="ValueSfx" type="Label" parent="MainMargin/VBox/Panel/VBoxContent/SfxRow"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 20
text = "80%"
horizontal_alignment = 2

[node name="BtnBack" type="Button" parent="MainMargin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 26
text = "BACK"
